--- a/src/components/postText/postText.css
+++ b/src/components/postText/postText.css
@@ -1,39 +1,12 @@
 .postText{
 	border-left: 1px solid #efefef;
 	margin-bottom: 16px;
-}
-
-.postTextHeader{
-	height: 30px;
-	padding: 16px;
-	border-bottom: 1px solid #efefef;
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-.textAvatar{
-	width: 32px;
-	height: 32px;
-	border-radius: 50%;
-	object-fit: cover;
-}
-
-.textName{
-	margin-left: 16px;
-	font-size: 14px;
-	font-weight: bold;
-}
-
-.date{
-	font-size: 14px;
-	color: #999;
-	margin: auto;
-  margin-right: 0;
+	flex-direction: column;
 }
 
 .textContainer{
-	padding: 16px 12px;
+	padding: 0 12px 16px 12px;
 	overflow-y: scroll;
 	font-size: 15px;
 }
